fixed block diagram

--- a/Documentation.tex
+++ b/Documentation.tex
@@ -161,7 +161,7 @@ Z powyższego opisu wynika, że algorytm ten zależy od czterech parametrów:
 Przygotowali\si my również schemat blokowy reprezentujący poszczególne kroki i scenariusze w procesie poszukiwania rozwiązania zadanego problemu, co można zobaczyć na poniższym rysunku.
 
 \begin{figure}[H]
-		\includegraphics[height=22cm, width=16cm]{pics/schematBlokowy.png}\\
+		\includegraphics[height=22cm, width=16cm]{pics/blockDiagram.png}\\
 	\caption{Schemat blokowy algorytmu symulowanego wyżarzania}
 \end{figure}
 
